[package]
name = "coda-tools"
version = "1.0.1"
edition = "2021"
authors = ["Jan-Lukas Wynen"]
license = "MIT"

[dependencies]
anyhow = "1.0.96"
bytesize = "2.0.0"
chrono = "0.4.39"
clap = { version = "4.5.30", features = ["derive"] }
colored = "3.0.0"
hdf5 = { package = "hdf5-metno", version = "0.10.0", features = ["static"] }

[[bin]]
name = "codai"
path = "src/main.rs"

[profile.release]
lto = "thin"

[workspace.metadata.cross.target.x86_64-unknown-linux-gnu]
image = "ghcr.io/cross-rs/x86_64-unknown-linux-gnu:main-centos"
